Add ability to edit books

--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -3,5 +3,7 @@ en:
     books:
       creation_success: "Book created successfully"
       creation_failure: "Book creation failed, as you entered incorrect title"
+      update_success: "Book updated successfully"
+      update_failure: "Book updation failed, as you entered incorrect title"
       deletion_success: "Book deleted successfully"
       deletion_failure: "Book deleted failed, as you entered incorrect title"
