--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -7,5 +7,7 @@ en:
       update_failure: "Book updation failed, as you entered incorrect title"
       deletion_success: "Book deleted successfully"
       deletion_failure: "Book deleted failed, as you entered incorrect title"
+    chapters:
+      deletion_failure: "Delete all the section of the chapter first, before deleting the chapter"      
     sections:
       creation_failure: "Section creations failed."
